cmake_minimum_required(VERSION 3.13)
configure_file("config.json" "config.json")
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("${base}" "${source}")
    set_property(TARGET "${base}" PROPERTY CXX_STANDARD 17)
    target_link_libraries("${base}" "config")
    add_test("config-${base}" "${base}")
endforeach()
